--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
+    "jotai": "^1.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
